# chatbot

./: .gitignore  COMPREHENSIVE_SYSTEM_ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  DOCKER-README.md  Dockerfile.frontend  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  build-docker.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.vds.yml  docker-compose.workers.yml  docker-compose.yml  requirements-local.txt  requirements.txt  technical work.md
backend/: .gitignore  README.md  first_run_setup.py  main.py  requirements.txt
backend/app/: main.py
backend/config/: network_config.py
backend/scripts/: generate_secrets.py
backend/services/: connection_manager.py
context_manager/: IMPLEMENTATION.md  README.md
context_manager/src/: config.py
context_manager/src/python/: api_server.py  context_manager.py  semantic_compression.py  vector_memory.py
context_manager/src/rust/: lib.rs
context_manager/src/typescript/: api.ts  contextStore.ts  types.ts
frontend/: package.json  vite.config.js
frontend/src/: App.vue  router.js
frontend/src/components/: ChatInterface.vue  NetworkStatus.vue
frontend/src/plugins/: network.js
frontend/src/services/: api.js
frontend/src/store/: offline.js
frontend/src/views/: ChatView.vue
hybrid-chatbot-project/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  pyproject.toml
hybrid-chatbot-project/backend/api/: main.py
hybrid-chatbot-project/backend/api/routers/: auth.py  characters.py  chat.py  monitoring.py  workers.py
hybrid-chatbot-project/backend/api/schemas/: auth.py
hybrid-chatbot-project/backend/core/: config.py  logging.py  security.py
hybrid-chatbot-project/backend/database/: models.py  session.py
hybrid-chatbot-project/backend/monitoring/: __init__.py  metrics.py
hybrid-chatbot-project/backend/workers/: worker_manager.py
hybrid-chatbot-project/deployment/: nginx.conf  production.env  prometheus.yml
hybrid-chatbot-project/frontend/: index.html  tsconfig.json  vite.config.ts
hybrid-chatbot-project/monitoring/: setup_monitoring.py
hybrid-chatbot-project/rust/crypto/: Cargo.toml
hybrid-chatbot-project/rust/crypto/src/: lib.rs
hybrid-chatbot-project/rust/tensorrt/: Cargo.toml
hybrid-chatbot-project/rust/tensorrt/src/: lib.rs
hybrid-chatbot-project/rust/utils/: Cargo.toml
hybrid-chatbot-project/rust/utils/src/: lib.rs
hybrid-chatbot-project/scripts/: launch_system.py  release_prep.py  run_all_tests.py
hybrid-chatbot-project/tests/: __init__.py  test_end_to_end.py  test_integration.py  test_load.py  test_security.py
init-scripts/: init.sql
llm_worker/: README.md  demo.py  main.py  requirements.txt  test_worker.py
llm_worker/src/config/: config.py
llm_worker/src/python/: api_server.py  llm_worker.py  model_converter.py  monitoring.py  tensorrt_converter.py
local-inference/: auto_config.py  health_check.py  llm_server.py  model_loader.py
local-inference/rust-core/: Cargo.toml
local-inference/rust-core/src/: lib.rs  tensorrt.rs
nginx/: chatbot.conf
web_worker/: IMPLEMENTATION.md  README.md  SUMMARY.md  blocked_domains.txt  demo.py  requirements.txt  sensitive_keywords.txt
web_worker/src/: __init__.py
web_worker/src/config/: __init__.py  config.py
web_worker/src/python/: __init__.py  api_server.py  web_worker.py
