[workspace]
resolver = "2"
members = [
    "rust/crypto",
    "rust/tensorrt",
    "rust/utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/hybrid-chatbot"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17"
rustls = "0.21"
thiserror = "1.0"
anyhow = "1.0"
ndarray = "0.15"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true