[tool.poetry]
name = "hybrid-chatbot"
version = "0.1.0"
description = "A distributed hybrid chatbot system with computational workers running on local Windows 11 machines with NVIDIA RTX GPUs"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
PyMySQL = "^1.0.2"
cryptography = "^41.0.3"
redis = "^5.0.1"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
lancedb = "^0.4.11"
torch = "^2.1.0"
transformers = "^4.35.0"
sentence-transformers = "^2.2.2"
tensorrt-llm = "^0.9.0"
websockets = "^12.0"
aiohttp = "^3.9.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
numpy = "^1.26.0"
pandas = "^2.1.0"
pyyaml = "^6.0.1"
celery = "^5.3.0"
flower = "^2.0.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
isort = "^5.12.0"
pre-commit = "^3.3.3"
bandit = "^1.7.5"
safety = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true