[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic utilities for secure tunneling in the hybrid chatbot system"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }